- fix log actions, stringily post body and send log on delete instead of null so my reducer can deal with it. - add delete button, no design yet but functional for testing - scale weather tracker accordingly - z-index away weather tracker controls so they don’t interfere with the rest of the UI - add weather tracker and time keeper to campaign container - fix history reducer to support create and delete logs properly - remove incrementTime function in favor of buildTimeUI function with the right time passed in to begin with. - fix up tests

--- a/app/containers/campaign/campaign.container.scss
+++ b/app/containers/campaign/campaign.container.scss
@@ -1,5 +1,7 @@
 @import '../../theme/layout';
+@import '../../theme/typography';
 
+// layout
 .campaignContainer {
   @include column-container;
   align-items: stretch;
@@ -7,11 +9,32 @@
 }
 
 .workTable {
-  flex: 2;
+  flex-grow: 1;
 }
 
 .history {
-  padding: 0 20px;
+  padding: 0 18px;
+  margin: 20px 0;
   overflow-y: scroll;
-  flex: 1;
+  border-left: 1px solid $swatch01;
+  max-width: 320px;
+}
+
+.current {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.weather {
+  border-left: 1px solid $swatch01;
+  padding-left: 20px;
+}
+
+// styles
+.heading {
+  @include font($serif, $large);
+  border-bottom: 1px solid $swatch01;
+  padding-bottom: 30px;
 }
